[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlnk"
version = "1.0.2"
description = "Central  test DS/DE library for scraping and data transformation"
requires-python = ">=3.8"
dependencies = [
    "requests,
    "beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["."]
